--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
     "build": "next build"
   },
   "dependencies": {
-    "daisyui": "^2.51.5",
-    "next": "^13.2.4",
+    "daisyui": "^3.9.3",
+    "next": "^13.5.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9",
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.32",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.3.1",
-    "typescript": "5.0.3"
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/node": "^20.8.6",
+    "@types/react": "^18.2.28",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.2.2"
   }
 }
